--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.8.6",
     "react-native": "0.60.3",
     "react-native-contacts": "^5.0.1",
-    "react-native-image-picker": "^1.0.1"
+    "react-native-image-picker": "^1.0.1",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
