--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
     "metro-react-native-babel-preset": "^0.54.1",
+    "react-native-debugger-open": "^0.3.19",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "scripts": {
+    "postinstall": "rndebugger-open --expo"
   }
 }
